# Loothound

./: .eslintrc.cjs  .gitignore  .prettierrc  LICENSE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  onrelease.yml
src/: App.css  App.tsx  AuthContext.tsx  DbContext.tsx  client.ts  context.tsx  data.ts  main.tsx  theme.tsx
src-tauri/: .env  .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230630_initial.sql  20230806165013_itemstorage_changes.sql  20230806173521_snapshot_value.sql  20230811120943_price_add_date.sql  20230814165831_pricing_changes.sql  20230817124334_stash_league.sql  20230817143957_pricing_league.sql  20230818182955_crucible_to_standard.sql  20230914214417_price_use_max_links.sql  20232607_add_price.sql
src-tauri/src/: main.rs  sql.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/sql/: mod.rs  model.rs
src/api/: api.ts  client.ts  db.ts
src/bindings/: Item.ts  ItemProperty.ts  ItemWithPrice.ts  Price.ts  Profile.ts  ProfileStashAssoc.ts  ProfileWithStashes.ts  Snapshot.ts  Stash.ts  UseEffectResponse.ts  index.ts
src/components/: EditProfileModal.tsx  ItemTable.tsx  ProfileModal.tsx  SampleStats.tsx  TopBar.tsx  collapsible_container.tsx
src/database/: decorators.tsx  driver.ts  migrations.ts  model.ts  model.tsx
src/filter/: filters.ts  types.ts
src/pages/: Login.tsx  login.tsx
src/parts/: samplestats.tsx
src/services/: services.ts
src/types/: types.ts
