[package]
name = "loothound"
version = "0.0.0"
description = "A Tauri App"
authors = ["Paul Kosel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["http-request", "shell-open", "window-close", "window-create"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
tauri-plugin-oauth = "0.0.0-alpha.0"
oauth2 = "4.4.1"
anyhow = "1.0.71"
url = "2.4.0"
reqwest = "0.11.18"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
