[package]
name = "loothound"
version = "0.0.0"
description = "A Tauri App"
authors = ["Paul Kosel"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [
    "http-request",
    "shell-open",
    "window-close",
    "window-create",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
tauri-plugin-oauth = "0.0.0-alpha.0"
oauth2 = "4.4.1"
url = "2.4.0"
thiserror = "1.0.40"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "json",
] }
tokio = "1.29.0"
ts-rs = "6.1"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
open = "5.0.0"
chrono = "0.4.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
